# hookd

./: .gitignore  README.md  pyproject.toml
hookd/: __init__.py  cli.py  constants.py  global_config.py
hookd/listener/: __init__.py  __main__.py  dispatcher.py  parser.py  server.py  verify.py
hookd/steps/: __init__.py  detect.py  funnel.py  github.py  preflight.py  system.py  tunnel.py
hookd/templates/: __init__.py  config.yaml.j2  handler.sh.j2  hookd.plist.j2  hookd.service.j2
hookd/templates/handlers/: comment-command-claude.sh  issue-opened-claude.sh  push-ci-claude.sh
hookd/tui/: app.py
hookd/tui/screens/: deploy.py  done.py  events.py  github.py  preflight.py  review.py  secrets.py  welcome.py
tests/: conftest.py  test_cli.py  test_event_log.py  test_global_config.py  test_integration.py  test_templates.py
tests/listener/: test_dispatcher.py  test_parser.py  test_server.py  test_verify.py
tests/steps/: test_detect.py  test_funnel.py  test_github.py  test_preflight.py  test_system.py  test_tunnel.py
tests/tui/: test_app.py  test_screens.py
