[project]
name = "hookd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hsiehting Lin", email = "hsieh.ting.lin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
hookd = "hookd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
