[project]
name = "hookd"
version = "0.1.0"
description = "GitHub webhook listener via Tailscale Funnel — TUI setup, config-based routing, shell handlers"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Hsiehting Lin", email = "hsieh.ting.lin@gmail.com" }
]
keywords = ["github", "webhook", "tailscale", "cli", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.12"
dependencies = [
    "textual>=3.0",
    "PyGithub>=2.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
]

[project.scripts]
hookd = "hookd.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "textual-dev>=1.0",
]

[project.urls]
Homepage = "https://github.com/htlin/hookd"
Repository = "https://github.com/htlin/hookd"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
